kubernetes/Ingress/taskflow_ingress.yml
# this method is the simplest way using github url to and apply layer 4 NLB and routing using nginx
# it bypasses the need of IRSM and Helm chart to install and create ALB and also create a load balancer yml file which is cloud independent

###
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.2/deploy/static/provider/aws/deploy.yaml
###

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: taskflow-ingress
  namespace: taskflow

spec:
  ingressClassName: nginx
  rules:
    - http: 
        paths: 
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8081
          - path: /api/v1/tasks
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8082
          - path: /api/v1/activity
            pathType: Prefix
            backend:
              service:
                name: activity
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-web
                port:
                  number: 80


# Load balancer 
# Run this commnad
# kubectl annotate svc ingress-nginx-controller -n ingress-nginx service.beta.kubernetes.io/aws-load-balancer-type-
